# app.py
@@ -4,5 +4,5 @@ import connexion
 
 if __name__ == '__main__':
     app = connexion.App(__name__, specification_dir='./swagger/')
-    app.add_api('swagger.yaml', arguments={'title': 'Access a visual representation of a surface'})
+    app.add_api('swagger.yaml', arguments={'title': 'Access seismic on an HTTP server'})
     app.run(port=8080)
